# APIJWT

./: .ruff.toml  ClientAdapt.md  Dockerfile  HowTo.md  Makefile  README.md  mypy.ini  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  logging.py  main.py
app/api/: routes_auth.py  routes_onboarding.py  routes_public.py
app/middleware/: correlation.py  rate_limit.py
app/security/: authz.py  deps.py  jwks_cache.py  jwt_validator.py  mtls.py
examples/: requests.http  wells_authx_example.py
scripts/: gen_test_tokens.py
tests/: test_health.py  test_key_rotation_retry.py  test_mtls.py  test_rate_limiting.py  test_scope_enforcement.py  test_validate_expired.py  test_validate_success.py  test_validate_wrong_aud.py  test_wells_authx.py
wells_authx/: ACCESS_CONTROL_GUIDE.md  IMPLEMENTATION_SUMMARY.md  PROJECT_STRUCTURE.md  README.md  SECURITY_IMPLEMENTATION.md  __init__.py  config.env.template  config.py  deps.py  main.py  requirements.txt  routes.py  run.py  run_tests.py  test_app.py  wells_authenticator.py
wells_authx/security/: __init__.py  access_control.py  container.py  deps.py  wells_authenticator.py
wells_authx/tests/: __init__.py  example_usage.py  test_access_control.py  test_app.py  test_dependency_injection.py  test_security_routes.py
